environments/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local
  labels:
    environment: local
    istio-injection: enabled
