environments/local/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: example-app
  namespace: local
spec:
  hosts:
    - "local.example.lan"
  gateways:
    - example-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: example-app-nginx.local.svc.cluster.local
            port:
              number: 8080
          weight: 100
      timeout: 30s
